[tool.poetry]
name = "nlss"
version = "0.1.0"
description = ""
authors = ["Brian Cranton <github.com/bcranton>"]

[tool.poetry.dependencies]
python = "^3.8"
praw = "^7.1.4"
python-dotenv = "^0.15.0"
stream-python = "^5.0.1"
python-twitch-client = "^0.7.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"
autopep8 = "^1.5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
